<resources>
    <string name="myApp_name">Coinz</string>
    <string name="action_settings">Settings</string>
    <string name="access_token">pk.eyJ1IjoiZGltaXRyaS1wb2xsYXJkIiwiYSI6ImNqbjNleG5rNDAwdHgzcG9jeTh6Zng0bzkifQ.rU8jvg7GZfT3CdwL37djlA</string>
    <string name="email_address">email address</string>
    <string name="sign_in">sign in</string>
    <string name="create_account">create account</string>
    <string name="password">password</string>
    <string name="sign_out">Sign out</string>
    <string name="title_coin_list">Wallet</string>
    <string name="title_coin_detail">Coin Details</string>
    <string name="trade">Trade</string>
    <string name="deposit">Deposit</string>
    <string name="available_gold">Available Gold:</string>
    <string name="send_coin">Send Coin</string>
...
