...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/content"
                android:layout_width="194dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
...
